--- a/index.html
+++ b/index.html
@@ -5,33 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       rel="preload"
-      href="/assets/static/media/0484562807a97172-s.p.woff2"
+      href="/fonts/0484562807a97172-s.p.woff2"
       as="font"
       crossorigin=""
       type="font/woff2"
     />
     <link
       rel="preload"
-      href="/assets/static/media/8888a3826f4a3af4-s.p.woff2"
+      href="/fonts/8888a3826f4a3af4-s.p.woff2"
       as="font"
       crossorigin=""
       type="font/woff2"
     />
     <link
       rel="preload"
-      href="/assets/static/media/b957ea75a84b6ea7-s.p.woff2"
+      href="/fonts/b957ea75a84b6ea7-s.p.woff2"
       as="font"
       crossorigin=""
       type="font/woff2"
     />
     <link
       rel="preload"
-      href="/assets/static/media/eafabf029ad39a43-s.p.woff2"
+      href="/fonts/eafabf029ad39a43-s.p.woff2"
       as="font"
       crossorigin=""
       type="font/woff2"
     />
-        <script
+    <script
       type="text/javascript"
       async=""
       src="https://static.ads-twitter.com/uwt.js"
@@ -236,12 +236,8 @@
       href="//widget.trustpilot.com/bootstrap/v5/tp.widget.bootstrap.min.js"
       as="script"
     />
-    <link
-      rel="stylesheet"
-      href="/assets/static/css/styles.css"
-      data-precedence="next"
-    />
-    <link rel="stylesheet" href="/assets/static/css/overrides.css" />
+    <link rel="stylesheet" href="/styles.css" data-precedence="next" />
+    <link rel="stylesheet" href="/overrides.css" />
     <style type="text/css" data-styled-jsx="">
       @-webkit-keyframes draw {
         to {
@@ -315,13 +311,6 @@
   <body
     class="__className_6bee3b flex flex-col tracking-tight items-center scroll-smooth"
   >
-  
-   
-  
-  
-   
- 
-    
     <script>
       self.__next_f.push([
         1,
@@ -353,8 +342,14 @@
       src="https://www.googletagmanager.com/gtag/js?id=G-9NLHTYN8C8"
       data-nscript="afterInteractive"
     ></script>
-                        <script src="/javascript/analytics.js" data-nscript="afterInteractive"></script>
-    <script src="/javascript/gtm-init.js" data-nscript="afterInteractive"></script>
+    <script
+      src="/javascript/analytics.js"
+      data-nscript="afterInteractive"
+    ></script>
+    <script
+      src="/javascript/gtm-init.js"
+      data-nscript="afterInteractive"
+    ></script>
     <script src="/javascript/mobile-nav.js" defer></script>
     <script src="/javascript/tabs.js" defer></script>
     <script src="/javascript/faq.js" defer></script>
