--- a/index.html
+++ b/index.html
@@ -47,10 +47,7 @@
     />
     <meta property="og:url" content="/" />
     <meta property="og:site_name" content="Pikzels" />
-    <meta
-      property="og:image"
-      content="/Images/game-home.jpg"
-    />
+    <meta property="og:image" content="/Images/game-home.jpg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:type" content="website" />
@@ -65,10 +62,7 @@
       name="twitter:description"
       content="Ideate, create &amp; enhance viral YouTube thumbnails to skyrocket your views! Join the new era of AI-powered content creation."
     />
-    <meta
-      name="twitter:image"
-      content="/Images/game-home.jpg"
-    />
+    <meta name="twitter:image" content="/Images/game-home.jpg" />
     <link rel="icon" href="/favicon.ico" type="image/x-icon" sizes="64x64" />
     <link
       rel="icon"
@@ -265,33 +259,6 @@
   <body
     class="__className_6bee3b flex flex-col tracking-tight items-center scroll-smooth"
   >
-    <script>
-      self.__next_f.push([
-        1,
-        'b:[["$","meta","0",{"name":"viewport","content":"width=device-width, initial-scale=1"}],["$","meta","1",{"charSet":"utf-8"}],["$","title","2",{"children":"Pikzels - Viral Thumbnails \u0026 Titles in Seconds"}],["$","meta","3",{"name":"description","content":"Ideate, create \u0026 enhance viral YouTube thumbnails to skyrocket your views! Join the new era of AI-powered content creation."}],["$","meta","4",{"name":"robots","content":"index, follow"}],["$","meta","5",{"property":"og:title","content":"Pikzels - Viral Thumbnails \u0026 Titles in Seconds"}],["$","meta","6",{"property":"og:description","content":"Ideate, create \u0026 enhance viral YouTube thumbnails to skyrocket your views! Join the new era of AI-powered content creation."}],["$","meta","7",{"property":"og:url","content":"https://pikzels.com"}],["$","meta","8",{"property":"og:site_name","content":"Pikzels"}],["$","meta","9",{"property":"og:image","content":"https://pikzels.com//metadata/og-image.jpg"}],["$","meta","10",{"property":"og:image:width","content":"1200"}],["$","meta","11",{"property":"og:image:height","content":"630"}],["$","meta","12",{"property":"og:type","content":"website"}],["$","meta","13",{"name":"twitter:card","content":"summary_large_image"}],["$","meta","14",{"name":"twitter:site","content":"https://x.com/pikzels"}],["$","meta","15",{"name":"twitter:creator","content":"@pikzels"}],["$","meta","16",{"name":"twitter:title","content":"Pikzels - Viral Thumbnails \u0026 Titles in Seconds"}],["$","meta","17",{"name":"twitter:description","content":"Ideate, create \u0026 enhance viral YouTube thumbnails to skyrocket your views! Join the new era of AI-powered content creation."}],["$","meta","18",{"name":"twitter:image","content":"https://pikzels.com//metadata/og-image.jpg"}],["$","link","19",{"rel":"icon","href":"/favicon.ico","type":"image/x-icon","sizes":"64x64"}],["$","link","20",{"rel":"icon","href":"/icon.png?592c87f33f5b282c","type":"image/png","sizes":"512x512"}],["$","link","21",{"rel":"apple-touch-icon","href":"/apple-icon.png?592c87f33f5b282c","type":"image/png","sizes":"512x512"}],["$","meta","22",{"name":"next-size-adjust"}]]\n',
-      ]);
-    </script>
-    <script>
-      self.__next_f.push([1, "7:null\n"]);
-    </script>
-    <script>
-      self.__next_f.push([
-        1,
-        '1a:I[435,["104","static/chunks/104-6859c38f1282e7ac.js","7138","static/chunks/7138-b8b38e820372f51a.js","6648","static/chunks/6648-f25e7ac7d5d894f3.js","3513","static/chunks/3513-6788cf1983ecba8c.js","3529","static/chunks/3529-cb528feef56bb2f8.js","5125","static/chunks/5125-c9428e0978fe9561.js","7935","static/chunks/7935-7be62927f72fc2db.js","2950","static/chunks/2950-28ec68835c65363d.js","5608","static/chunks/app/(home)/page-55efcac130534bd7.js"],"default"]\n1b:I[3087,["104","static/chunks/104-6859c38f1282e7ac.js","7138","static/chunks/7138-b8b38e820372f51a.js","6648","static/chunks/6648-f25e7ac7d5d894f3.js","3513","static/chunks/3513-6788cf1983ecba8c.js","3529","static/chunks/3529-cb528feef56bb2f8.js","5125","static/chunks/5125-c9428e0978fe9561.js","7935","static/chunks/7935-7be62927f72fc2db.js","2950","static/chunks/2950-28ec68835c65363d.js","5608","static/chunks/app/(home)/page-55efcac130534bd7.js"],"default"]\n1c:I[9024,["104","static/chunks/104-6859c38f1282e7ac.js","7138","static/chunks/7138-b8b38e820372f51a.js","6648","static/chunks/6648-f25e7ac7d5d894f3.js","3513","static/chunks/3513-6788cf1983ecba8c.js","3529","static/chunks/3529-cb528feef56bb2f8.js","5125","static/chunks/5125-c9428e0978fe9561.js","7935","static/chunks/7935-7be62927f72fc2db.js","2950","static/chunks/2950-28ec68835c65363d.js","5608","static/chunks/app/(home)/page-55efcac130534bd7.js"],"default"]\n1d:I[5952,["104","static/chunks/104-6859c38f1282e7ac.js","7138","static/chunks/7138-b8b38e820372f51a.js","6648","static/chunks/6648-f25e7ac7d5d894f3.js","3513","static/chunks/3513-6788cf1983ecba8c.js","3529","static/chunks/3529-cb528feef56bb2f8.js","5125","static/chunks/5125-c9428e0978fe9561.js","7935","static/chunks/7935-7be62927f72fc2db.js","2950","static/chunks/2950-28ec68835c65363d.js","5608","static/chunks/app/(home)/page-55efcac130534bd7.js"],"default"]\n1e:I[5916,["104","static/chunks/104-6859c38f1282e7ac.js","7138","static/chunks/7138-b8b38e820372f51a.js","6648","static/chunks/6648-f25e7ac7d5d894f3.js","3513","static/chunks/3513-6788cf1983ecb',
-      ]);
-    </script>
-    <script>
-      self.__next_f.push([
-        1,
-        'a8c.js","3529","static/chunks/3529-cb528feef56bb2f8.js","5125","static/chunks/5125-c9428e0978fe9561.js","7935","static/chunks/7935-7be62927f72fc2db.js","2950","static/chunks/2950-28ec68835c65363d.js","5608","static/chunks/app/(home)/page-55efcac130534bd7.js"],"default"]\n1f:I[9683,["104","static/chunks/104-6859c38f1282e7ac.js","7138","static/chunks/7138-b8b38e820372f51a.js","6648","static/chunks/6648-f25e7ac7d5d894f3.js","3513","static/chunks/3513-6788cf1983ecba8c.js","3529","static/chunks/3529-cb528feef56bb2f8.js","5125","static/chunks/5125-c9428e0978fe9561.js","7935","static/chunks/7935-7be62927f72fc2db.js","2950","static/chunks/2950-28ec68835c65363d.js","5608","static/chunks/app/(home)/page-55efcac130534bd7.js"],"default"]\n20:I[6106,["104","static/chunks/104-6859c38f1282e7ac.js","7138","static/chunks/7138-b8b38e820372f51a.js","6648","static/chunks/6648-f25e7ac7d5d894f3.js","3513","static/chunks/3513-6788cf1983ecba8c.js","3529","static/chunks/3529-cb528feef56bb2f8.js","5125","static/chunks/5125-c9428e0978fe9561.js","7935","static/chunks/7935-7be62927f72fc2db.js","2950","static/chunks/2950-28ec68835c65363d.js","5608","static/chunks/app/(home)/page-55efcac130534bd7.js"],"default"]\n21:I[2950,["104","static/chunks/104-6859c38f1282e7ac.js","7138","static/chunks/7138-b8b38e820372f51a.js","6648","static/chunks/6648-f25e7ac7d5d894f3.js","3513","static/chunks/3513-6788cf1983ecba8c.js","3529","static/chunks/3529-cb528feef56bb2f8.js","5125","static/chunks/5125-c9428e0978fe9561.js","7935","static/chunks/7935-7be62927f72fc2db.js","2950","static/chunks/2950-28ec68835c65363d.js","5608","static/chunks/app/(home)/page-55efcac130534bd7.js"],"default"]\n22:I[7584,["104","static/chunks/104-6859c38f1282e7ac.js","7138","static/chunks/7138-b8b38e820372f51a.js","6648","static/chunks/6648-f25e7ac7d5d894f3.js","3513","static/chunks/3513-6788cf1983ecba8c.js","3529","static/chunks/3529-cb528feef56bb2f8.js","5125","static/chunks/5125-c9428e0978fe9561.js","7935","static/chunks/7935-7be62927f72fc2db.js","2950","static/chunks/2950-28ec68835c653',
-      ]);
-    </script>
-    <script>
-      self.__next_f.push([
-        1,
-        '63d.js","5608","static/chunks/app/(home)/page-55efcac130534bd7.js"],"default"]\n8:["$","main",null,{"className":"relative z-10 w-full flex flex-col items-center","children":[["$","$L1a",null,{"usersCount":"483793"}],["$","$L1b",null,{"thumbnailsCount":"1627514"}],["$","section",null,{"id":"features","className":"bg-[#161616] overflow-hidden flex justify-start flex-col items-center w-full pt-12 px-3 lg:py-3","children":[["$","div",null,{"className":" w-full flex justify-center","children":["$","$L1c",null,{}]}],["$","div",null,{"className":" bg-[#1b2220] overflow-hidden flex justify-start flex-col items-center w-full rounded-2xl","children":["$","$L1d",null,{}]}],["$","div",null,{"className":" bg-[#161616] w-full flex justify-center","children":["$","$L1e",null,{}]}],["$","div",null,{"className":"bg-[#1b2220] duration-300 ease-in-out overflow-hidden flex justify-start flex-col items-center w-full rounded-2xl","children":["$","$L1f",null,{}]}]]}],["$","$L20",null,{}],["$","$L21",null,{}],["$","$L22",null,{}]]}]\n',
-      ]);
-    </script>
     <script src="/javascript/mobile-nav.js" defer></script>
     <script src="/javascript/tabs.js" defer></script>
     <script src="/javascript/faq.js" defer></script>
@@ -694,7 +661,15 @@
                       data-theme="dark"
                       style="position: relative"
                     >
-                      <div style="position: relative; height: 24px; width: 100%; display: block; overflow: hidden;"></div>
+                      <div
+                        style="
+                          position: relative;
+                          height: 24px;
+                          width: 100%;
+                          display: block;
+                          overflow: hidden;
+                        "
+                      ></div>
                     </div>
                   </div>
                 </div>
@@ -7443,11 +7418,7 @@
                 </button>
               </li>
               <li class="row-span-1 group flex relative">
-                <a
-                  target="_blank"
-                  class="absolute z-20 inset-0"
-                  href="/"
-                ></a>
+                <a target="_blank" class="absolute z-20 inset-0" href="/"></a>
                 <div
                   class="flex flex-col items-center justify-center w-full gap-4 py-6 px-1 sm:p-6 bg-primary-green/5 rounded-lg border-2 border-primary-green/20 group-hover:bg-primary-green/15 group-hover:border-primary-green/60 duration-300 shadow-inner-green-sm/10"
                 >
@@ -7478,7 +7449,15 @@
                         data-theme="dark"
                         style="position: relative"
                       >
-                        <div style="position: relative; height: 24px; width: 100%; display: block; overflow: hidden;"></div>
+                        <div
+                          style="
+                            position: relative;
+                            height: 24px;
+                            width: 100%;
+                            display: block;
+                            overflow: hidden;
+                          "
+                        ></div>
                       </div>
                     </div>
                   </button>
@@ -9930,6 +9909,6 @@
         },
       ]);
     </script>
-  <script src="javascript/localize-images.js" defer></script>
+    <script src="javascript/localize-images.js" defer></script>
   </body>
 </html>
