update login page

--- a/index.html
+++ b/index.html
@@ -469,11 +469,13 @@
                     class="h-[48px] hidden lg:block w-px bg-gradient-to-t from-transparent via-white/10 to-transparent"
                   ></li>
                   <li class="pr-2">
-                    <button
-                      class="p-4 opacity-70 duration-300 hover:text-primary-green hover:opacity-90 translate-z-0 hover:drop-shadow-[0_0px_10px_rgba(43,251,205,0.35)]"
-                    >
-                      Log In
-                    </button>
+                    <a href="/login.html">
+                      <button
+                        class="p-4 opacity-70 duration-300 hover:text-primary-green hover:opacity-90 translate-z-0 hover:drop-shadow-[0_0px_10px_rgba(43,251,205,0.35)]"
+                      >
+                        Log In
+                      </button>
+                    </a>
                   </li>
                 </ul>
               </nav>
@@ -520,11 +522,13 @@
                   <div
                     class="relative flex items-center gap-2 z-10 bg-white/10 group-hover:bg-white/15 duration-300 rounded-full py-2 px-6 font-medium text-sm border-[1.5px] border-primary-green/10 text-primary-green translate-z-0 sm:drop-shadow-[0_0_25px_rgba(255,255,255,0.2)] sm:group-hover:drop-shadow-[0_0_5px_rgba(43,251,205,0.35)]"
                   >
-                    <div
-                      class="translate-z-0 sm:group-hover:drop-shadow-[0_0px_10px_rgba(43,251,205,0.1)]"
-                    >
-                      Try for Free
-                    </div>
+                    <a href="/login.html">
+                      <div
+                        class="translate-z-0 sm:group-hover:drop-shadow-[0_0px_10px_rgba(43,251,205,0.1)]"
+                      >
+                        Try for Free
+                      </div>
+                    </a>
                   </div>
                 </button>
               </div>
