update login page

--- a/index.html
+++ b/index.html
@@ -588,10 +588,14 @@
               class="flex flex-col sm:gap-2 items-center py-4 sm:flex-row-reverse lg:flex-row lg:-translate-x-5"
             >
               <div class="flex relative mb-2 flex-col items-center">
+
+
                 <button
                   aria-label="Try for Free"
                   class="group duration-300 p-2 bg-primary-green/[0.15%] hover:bg-primary-green/[0.5%] border-[1.5px] border-primary-green/[2%] rounded-full"
                 >
+                 <a href="/login.html">
+
                   <div
                     class="p-2 bg-primary-green/[1%] duration-300 group-hover:bg-primary-green/[1%] border-[1.5px] border-primary-green/[5%] group-hover:border-primary-green/[10%] rounded-full"
                   >
@@ -601,6 +605,8 @@
                       Try for Free
                     </div>
                   </div>
+                 </a>
+
                 </button>
               </div>
               <button class="p-3 mb-2 group flex items-center gap-2">
@@ -8040,11 +8046,15 @@
                   <div
                     class="relative w-full flex items-center gap-1 z-10 drop-shadow-[0_0_25px_rgba(43,251,205,0.35)] bg-white/10 border-white/10 text-white/90 group-hover:bg-white/15 group-hover:text-primary-green duration-300 rounded-full py-2 px-4 font-medium text-base border-[1.5px] translate-z-0 group-hover:drop-shadow-[0_0_5px_rgba(43,251,205,0.35)]"
                   >
-                    <div
+                   <a href="/login.html">
+<div
                       class="w-full translate-z-0 group-hover:drop-shadow-[0_0px_10px_rgba(43,251,205,0.35)]"
                     >
                       Subscribe
                     </div>
+
+                   </a>
+                    
                   </div></button
                 ><button
                   class="flex items-center gap-1 text-sm duration-300 text-white/80 hover:text-white/100"
