--- a/login.html
+++ b/login.html
@@ -9,6 +9,7 @@
 
     <link rel="stylesheet" href="/login.css" data-precedence="next" />
     <link rel="stylesheet" href="/login-2.css" data-precedence="next" />
+    <link rel="stylesheet" href="/overrides.css" data-precedence="next" />
 
     <link
       rel="preload"
